--- a/clusters/test3/infr-apps/certmanager.yaml
+++ b/clusters/test3/infr-apps/certmanager.yaml
@@ -47,6 +47,14 @@ spec:
                 value: k8s-spb2-backend3-certmanager-cleanup-cron
           - target:
               kind: Job
+              name: APP_NAME_PLACEHOLDER-cleanup-old-rbac
+            patch: |-
+              - op: replace
+                path: /metadata/name
+                value: k8s-spb2-backend3-certmanager-cleanup-old-rbac
+          - target:
+              kind: Job
+              name: APP_NAME_PLACEHOLDER-cleanup
             patch: |-
               - op: replace
                 path: /metadata/name
